<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaAdicionarEditarBandasActivity">

    <Button
        android:id="@+id/btn_salvar_banda"
        android:layout_width="270dp"
        android:layout_height="58dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/primary"
        android:text="@string/app_adicionar_bandas_btn_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/image_salvar_banda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/app_bandas_nome_padrao"
        app:layout_constraintBottom_toTopOf="@+id/input_nome_banda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/input_nome_banda"
        android:layout_width="307dp"
        android:layout_height="69dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/app_adicionar_bandas_input_nome"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_integrante_banda"
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:text="@string/app_adicionar_bandas_text_integrantes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nome_banda" />

    <Button
        android:id="@+id/btn_adicionar_integrante_banda"
        android:layout_width="285dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"
        android:onClick="adicionarIntegrantesBanda"
        android:text="@string/app_adicionar_bandas_input_add_integrantes"
        android:textColor="@color/adicionar_integrante_btn_color"
        app:iconTint="@android:color/secondary_text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_integrante_banda" />

</androidx.constraintlayout.widget.ConstraintLayout>